--- a/site_form/style.css
+++ b/site_form/style.css
@@ -157,8 +157,8 @@ body {
 	margin: 0 auto;
 	margin-top: 5px;
 }
-.form-field input, .form-field a, .form-field select .btn{
-	display:inline-block;
+.form-field input, .form-field a, .form-field select{
+	display: inline-block;
 	margin: 10px;
 	padding: 10px;
 	min-width: 70px;
