--- a/templates/pages/game/create.html
+++ b/templates/pages/game/create.html
@@ -2,17 +2,29 @@
 
 {% block content %}
 	<main class="main centered-box">
-		<form method="post" action="/game/editor" class="focus-block form-field">
+		<form method="post" action="#" class="focus-block form-field">
 			<h2>Создание Сессии Игры</h2>
+            <p>
+				<label>Название игры: <input type="text" name="name" id="name" minlength="5" maxlength="32" required></label>
+			</p>
 			<p>
 				<label>Время начала игры: <input type="time" name="start_time" id="start_time" required></label>
 				<input type="date" id="datefield" name="datemax" required>
 			</p>
 			<p>
-				<label>Длительность игры: <input type="number" name="d" id="d" min="5" max="60" step="5" value="5"> (min)</label>
+				<label>Длительность игры: <input type="number" name="time" id="d" min="5" max="130" step="5" value="5"> (min)</label>
+			</p>
+            <p>
+				<label>Дальность видимости: <input type="number" name="view" id="view" min="1" max="10" step="1" value="1"></label>
+			</p>
+            <p>
+				<label><input type="checkbox" name="hide" id="hide">Скрывать в общем списке комнат</label>
+			</p>
+            <p>
+				<label><input type="checkbox" name="join" id="join">Принять участие</label>
 			</p>
 			<div class="form-menu centered-box">
-				<input type="submit" value="Отправить" class="form-btn" >
+				<input type="submit" value="Создать игру" class="form-btn" >
 			</div>
 		</form>
 	</main>
