Изменен адрес перенаправления с формы

--- a/templates/pages/game/connect.html
+++ b/templates/pages/game/connect.html
@@ -3,7 +3,7 @@
 {% block content %}
 	<main class="main centered-box">
 		<section class="focus-block">
-			<form method="post" action="" class="form-field" id="form">
+			<form method="post" action="#" class="form-field" id="form">
 				<h2>Вход в игру</h2>
 				<div class="form-menu">
 					<label>Id Игры <input type="text" name="game_id" id="game_id" required></label>
