--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -25,7 +25,7 @@
 					</ul>
 				</li>
                 {% endif %}
-				<li><a href="#">Записи Игр</a></li>
+				<li><a href="/game/demo">Записи Игр</a></li>
 				<li><a href="/help/guide">Справочник</a></li>
 
 				<li class="left-bottom">
