Обновлена информация о богах

--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -51,9 +51,9 @@
 		<div class="footer-info">
 			Проект был создан:
 			<ul>
-			<li>sometext sometext</li>
-			<li>sometext sometext</li>
-			<li>sometext sometext</li>
+                <li><a href="https://github.com/Chevik08">Черных Никита</a> - Делал саму змейку</li>
+                <li><a href="https://github.com/qpexlegendary">Терентьев Андрей</a> - Занимался backend разработкой</li>
+                <li><a href="https://github.com/AlexandarViWE">Бочкарев Александр</a> - Занимался frontend разработкой</li>
 			</ul>
 		</div>
 	</footer>
