--- a/templates/pages/game/viewing.html
+++ b/templates/pages/game/viewing.html
@@ -52,7 +52,7 @@ let personalSnakeId = null;
 //const playersHesh = JSON.parse(``);
 
 // Карта Игры
-const gameReplay = JSON.parse({{ demo }}.replaceAll("&#34;", '"'));
+const gameReplay = JSON.parse("{{ demo }}".replaceAll("&#34;", '"'));
 
 // HTML лементы
 const canvas  = document.getElementById("game_screen");
