Изменен размер списка сессий при их отсутствии

--- a/templates/static/css/styles.css
+++ b/templates/static/css/styles.css
@@ -212,6 +212,7 @@ body {
 
 /* Список сессий игр */
 .session-list {
+    width:610px;
 	border: 1px solid #000000;
 	background: #FFFFFF;
 	font-size: 18px;
