Исправлены размеры окон с id играми

--- a/templates/pages/game/connect.html
+++ b/templates/pages/game/connect.html
@@ -6,8 +6,8 @@
 			<form method="post" action="#" class="form-field" id="form">
 				<h2>Вход в игру</h2>
 				<div class="form-menu">
-					<label>Id Игры <input type="text" name="game_id" id="game_id" required></label>
-					<input type="submit" value="Подключится" class="form-btn">
+					<label>Id Игры <input type="text" name="game_id" id="game_id" required style="width: 240px;"></label>
+					<input type="submit" value="Подключится" class="form-btn" style="margin-left: auto;">
 				</div>
 			</form>
 
@@ -18,7 +18,7 @@
 					<div class="session">
 						<div class="session-head">
 							<h3><span>{{ game['name'] }}</span></h3>
-                            <a href="/game/join/{{ game['_id'] }}" class="btn">Войти</a>
+                            <a href="/game/join/{{ game['_id'] }}" class="btn" style="margin-left: auto;">Войти</a>
 						</div>
 						<div class="session-info">
 							<ul>
