Изменен скрипт отображеня записи

--- a/templates/pages/game/viewing.html
+++ b/templates/pages/game/viewing.html
@@ -48,7 +48,7 @@
 <script>
 // Данные Зрителя
 const accountHesh = '{{ user_id }}';
-let personalSnakeId = null;
+let personalSnakeId = accountHesh;
 
 // Данные Игроков: Hesh <=> Name
 //const playersHesh = JSON.parse(``);
@@ -226,11 +226,6 @@ function main() {
 	document.getElementById("info_number").innerHTML = `${Object.keys(gameReplay.players).length}`;
 	document.getElementById("info_map").innerHTML = `${gameReplay.gameSettings.weight}x${gameReplay.gameSettings.height}`;
 
-	// Нахождение нужного id
-	for (let i in gameReplay.players) {
-		if (gameReplay.players[i] === accountHesh)
-			personalSnakeId = i;
-	}
 	console.log("personalSnakeId = ", personalSnakeId);
 
 	drawField();
