Убраны страницы с гайдами

--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -26,7 +26,6 @@
 				</li>
                 {% endif %}
 				<li><a href="/game/demo">Записи Игр</a></li>
-				<li><a href="/help/guide">Справочник</a></li>
 
 				<li class="left-bottom">
 					{% if auth %}
@@ -55,6 +54,7 @@
                 <li><a href="https://github.com/qpexlegendary">Терентьев Андрей</a> - Занимался backend разработкой</li>
                 <li><a href="https://github.com/AlexandarViWE">Бочкарев Александр</a> - Занимался frontend разработкой</li>
 			</ul>
+			<a href="https://github.com/SibFU-SAN/pySnake">GitHub репозиторий проекта</a>
 		</div>
 	</footer>
 
