Изменены элементы редактора

--- a/templates/pages/game/editor.html
+++ b/templates/pages/game/editor.html
@@ -32,10 +32,10 @@
 				</ul>
 			</p>
 
-			<textarea name="game_code" cols="50" rows="10" id="code" class="textarea" required>{{ code }}</textarea>
+			<textarea name="game_code" cols="50" rows="10" id="code" class="textarea">{{ code }}</textarea>
 
 			<div class="centered-box form-menu">
-				<input type="submit" value="Отправить" class="form-btn" id="submit">
+				<input type="submit" value="Сохранить код" class="form-btn" id="submit">
 				<input type="reset" value="Очистить" class="form-btn" id="reset">
 			</div>
 		</form>
