--- a/templates/pages/game/editor.html
+++ b/templates/pages/game/editor.html
@@ -37,6 +37,7 @@
 			<div class="centered-box form-menu">
 				<input type="submit" value="Сохранить код" class="form-btn" id="submit">
 				<input type="reset" value="Очистить" class="form-btn" id="reset">
+				<a target="_blank" rel="noopener noreferrer" href="https://github.com/SibFU-SAN/pySnake/wiki/%D0%9D%D0%B0%D0%BF%D0%B8%D1%81%D0%B0%D0%BD%D0%B8%D0%B5-%D0%B7%D0%BC%D0%B5%D0%B9%D0%BA%D0%B8" class="form-btn">Документация</a>
 			</div>
 		</form>
 
