Изменено название сайта

--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head> <!-- Этот файл шаблон -->
 	<meta charset="UTF-8">
-	<title>Соревновательная Площадка</title>
+	<title>PySnake</title>
 	<link rel="stylesheet" href="{{ url_for("static", filename="static/css/styles.css") }}">
 	<link rel="icon" href="{{ url_for("static", filename="static/images/logo.png") }}" sizes="32x32">
 	{% block links %}
