Обновлены страницы-заглушки

--- a/templates/pages/404.html
+++ b/templates/pages/404.html
@@ -3,7 +3,7 @@
 {% block content %}
 <main class="main">
 	<section>
-		<h1>404 Not Found</h1>
+		<h1>Страница не найдена</h1>
 	</section>
 </main>
 {% endblock %}
