--- a/templates/pages/500.html
+++ b/templates/pages/500.html
@@ -1,5 +1,9 @@
 {% extends "pages/base.html" %}
 
 {% block content %}
-    Произошла непредвиденная ошибка. Отчет о ней был отправлен администратору.
+<main class="main">
+	<section>
+		Произошла непредвиденная ошибка. Отчет о ней был отправлен администратору.
+	</section>
+</main>
 {% endblock %}
