--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -1,46 +1,63 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head> <!-- Этот файл шаблон -->
+<head>
 	<meta charset="UTF-8">
-	<title>PySnake</title>
+
+    <title>
+        {% block title %}
+            PySnake
+        {% endblock %}
+	</title>
+
 	<link rel="stylesheet" href="{{ url_for("static", filename="static/css/styles.css") }}">
 	<link rel="icon" href="{{ url_for("static", filename="static/images/logo.png") }}" sizes="32x32">
+
 	{% block links %}
 	{% endblock %}
+
 </head>
 <body>
 	<header class="header">
 		<div class="headline">
-			<p><img src="{{ url_for("static", filename="static/images/logo.png") }}" >Соревновательная Площадка</p>
-		</div><!-- Лого / Название width=40pt-->
+			<p><img src="{{ url_for("static", filename="static/images/logo.png") }}"  alt="PySnake">Соревновательная Площадка</p>
+		</div>
 		<nav>
 			<ul class="head-menu">
 				<li><a href="/">Главная</a></li>
+
                 {% if auth %}
 				<li><a href="#">Игра</a>
 					<ul class="submenu">
-						<li><a href="/game/connect">Играть</a></li>
-                        <li><a href="/game/create">Создать Сессию</a></li>
-						<li><a href="/game/top">Лидеры</a></li>
+
+                        {% if game %}
+                            <li><a href="/game/editor">Продолжить игру</a></li>
+                        {% else %}
+                            <li><a href="/game/connect">Играть</a></li>
+                            <li><a href="/game/create">Создать комнату</a></li>
+                        {% endif %}
+
+						<li><a href="/game/top">Топ 10 игроков</a></li>
 					</ul>
 				</li>
                 {% endif %}
+
 				<li><a href="/game/demo">Записи Игр</a></li>
 
 				<li class="left-bottom">
+
 					{% if auth %}
-					<a href="/login"><img src="/templates/static/images/profile_stub.png" alt=" " class="small-profile_logo"> Аккаунт</a>
-					<ul class="submenu">
-						<li><a href="/profile/settings">Редактировать</a></li>
-						<li><a href="/profile/sign_out">Выход</a></li>
-					</ul>
+					    <a href="/login"><img src="/templates/static/images/profile_stub.png" alt=" " class="small-profile_logo"> Аккаунт</a>
+					    <ul class="submenu">
+						    <li><a href="/profile/settings">Редактировать</a></li>
+						    <li><a href="/profile/sign_out">Выход</a></li>
+					    </ul>
                     {% else %}
-                    <a href="/login">Вход</a>
+                        <a href="/login">Вход</a>
                     {% endif %}
+
 				</li>
 			</ul>
 		</nav>
-		<!-- main-menu -->
 	</header>
 	
 	{% block content %}
