--- a/templates/pages/profile/login.html
+++ b/templates/pages/profile/login.html
@@ -8,21 +8,25 @@
 	<main class="main centered-box">
 		<form method="post" action="#" class="focus-block form-field">
 			<h2>ВХОД</h2>
+            {{ form.csrf_token() }}
 			<p>
-				<label>Логин <input type="text" name="login" required minlength="4" maxlength="32" value="{{ passed_login }}"></label>
+				{{ form.login.label() }}
+                {{ form.login()  }}
 			</p>
-			<p>
-				<label>Пароль <input type="password" name="password" required minlength="6" maxlength="32"></label>
-			</p>
+            <p>
+                {{ form.password.label() }}
+                {{ form.password() }}
+            </p>
+
 			<div class="form-menu">
 				<input type="submit" value="Вход" class="form-btn">
-            	<a href="/register" class="form-btn">Регистрация</a>
+            	<a href="{{ url_for("register_page") }}" class="form-btn">Регистрация</a>
 			</div>
 
-            {% if error %}
-			<div class="lost-access">
-				<p class="text-danger">{{ error }}</p>
-			</div>
+            {% if form.is_submitted() %}
+                <div class="lost-access">
+                    <p class="text-danger">Введен неверный логин и пароль</p>
+                </div>
             {% endif %}
 		</form>
 	</main>
