--- a/templates/pages/profile/register.html
+++ b/templates/pages/profile/register.html
@@ -8,18 +8,22 @@
 	<main class="main centered-box">
 		<form method="post" action="#" class="focus-block form-field">
 			<h2>РЕГИСТРАЦИЯ</h2>
+            {{ form.csrf_token() }}
 			<p>
-				<label>Логин <input type="text" name="login" required minlength="4" maxlength="32" value="{{ data['login'] if data else '' }}"></label>
+                {{ form.login.label() }}
+                {{ form.login() }}
 			</p>
 			<p>
-				<label>Пароль <input type="password" name="password" required minlength="6" maxlength="32"></label>
+				{{ form.password.label() }}
+                {{ form.password() }}
 			</p>
 			<p>
-				<label>Повторите пароль <input type="password" name="confirmation" required minlength="6" maxlength="32"></label>
+				{{ form.confirmation.label() }}
+                {{ form.confirmation() }}
 			</p>
 			<div class="form-menu">
 				<input type="submit" value="Регистрация" class="form-btn">
-				<a href="/login" class="form-btn">У меня уже есть аккаунт</a>
+				<a href="{{ url_for("login_page") }}" class="form-btn">У меня уже есть аккаунт</a>
 			</div>
 
             {% if error %}
