--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -46,10 +46,10 @@
 				<li class="left-bottom">
 
 					{% if user and user.is_authenticated %}
-					    <a href="{{ url_for("login_page") }}"><img src="/templates/static/images/profile_stub.png" alt=" " class="small-profile_logo"> Аккаунт</a>
+					    <a href="/profile"><img src="/templates/static/images/profile_stub.png" alt=" " class="small-profile_logo"> Аккаунт</a>
 					    <ul class="submenu">
 						    <li><a href="/profile/settings">Редактировать</a></li>
-						    <li><a href="/profile/sign_out">Выход</a></li>
+						    <li><a href="{{ url_for("logout_page") }}">Выход</a></li>
 					    </ul>
                     {% else %}
                         <a href="{{ url_for("login_page") }}">Вход</a>
