--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -46,7 +46,7 @@
 				<li class="left-bottom">
 
 					{% if user and user.is_authenticated %}
-					    <a href="/profile"><img src="/templates/static/images/profile_stub.png" alt=" " class="small-profile_logo"> Аккаунт</a>
+					    <a href="{{ url_for("profile_page") }}"><img src="/templates/static/images/profile_stub.png" alt=" " class="small-profile_logo"> Аккаунт</a>
 					    <ul class="submenu">
 						    <li><a href="/profile/settings">Редактировать</a></li>
 						    <li><a href="{{ url_for("logout_page") }}">Выход</a></li>
