Добавлена страница с таблицей лидеров

--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -36,7 +36,7 @@
                             <li><a href="/game/create">Создать комнату</a></li>
                         {% endif %}
 
-						<li><a href="/game/top">Топ 10 игроков</a></li>
+						<li><a href="{{ url_for("top_page") }}">Таблица лидеров</a></li>
 					</ul>
 				</li>
                 {% endif %}
