--- a/templates/pages/base.html
+++ b/templates/pages/base.html
@@ -48,7 +48,7 @@
 					{% if user and user.is_authenticated %}
 					    <a href="{{ url_for("profile_page") }}"><img src="/templates/static/images/profile_stub.png" alt=" " class="small-profile_logo"> Аккаунт</a>
 					    <ul class="submenu">
-						    <li><a href="/profile/settings">Редактировать</a></li>
+						    <li><a href="{{ url_for("settings_page") }}">Редактировать</a></li>
 						    <li><a href="{{ url_for("logout_page") }}">Выход</a></li>
 					    </ul>
                     {% else %}
