Обновлена страница просмотра демки

--- a/templates/pages/game/watch.html
+++ b/templates/pages/game/watch.html
@@ -39,16 +39,16 @@
 
 <script>
 // Данные Зрителя
-const accountHesh = '{{ user_id }}';
+const accountHesh = '{{ user.id if user else "0" }}';
 let personalSnakeId = accountHesh;
 
 // Данные Игроков: Hesh <=> Name
 //const playersHesh = JSON.parse(``);
 
 // Карта Игры
-const gameReplay = JSON.parse(`{{ demo }}`.replaceAll("&#34;", '"'));
+const gameReplay = JSON.parse(`{{ game.demo }}`.replaceAll("&#34;", '"'));
 
-let PlayersColors = new Map();;
+let PlayersColors = new Map();
 
 // HTML лементы
 const canvas  = document.getElementById("game_screen");
